infrastructure/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: premium-tech
spec:
  selector:
    app: premium-tech
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
